# croc

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  coding_guidelines.md
src/examples/: CMakeLists.txt  random_real_demo.cpp
src/lib/: CMakeLists.txt  random_real.cpp  random_real.h  random_real.t.cc  random_real.t.cpp
